Add content to the main page
  - add the various buttons and features to the main page and style
    accordingly
  - add the FOR loops to the game.js file to populate the game grid and
    preview grid

--- a/index.html
+++ b/index.html
@@ -26,29 +26,26 @@
     <main>
 
       <section class="left">
-        <article class="rules">
-          <h2>How to Play</h2>
-          <p>Rules go here</p>
-        </article>
-        <button type="button" name="start/pause">Start</button>
+        <button type="button" name="controls/rules" id="controlsAndRules">How to Play</button>
+        <button type="button" name="start/pause" id="startButton">Start</button>
       </section>
 
       <section class="centre">
-        <div class="grid" id="main-grid"></div>
+        <div class="grid" id="mainGrid"></div>
       </section>
 
       <section class="right">
         <div class="next-block">
           <h3>Next Block</h3>
-          <div class="grid" id="mini-grid"></div>
+          <div class="grid" id="previewGrid"></div>
         </div>
         <div class="scores">
           <p>High Score:
-            <span id="high-score"></span></p>
+            <span id="highScore"></span></p>
           <p>Level:
-            <span id="current-level"></span></p>
+            <span id="currentLevel"></span></p>
           <p>Score:
-            <span id="current-score"></span></p>
+            <span id="currentScore"></span></p>
         </div>
       </section>
 
