--- a/index.html
+++ b/index.html
@@ -14,32 +14,28 @@
     <header>
       <h1>Block Puzzle</h1>
       <ul>
-        <li>
-          <a href="#">Scoreboard</a>
-        </li>
-        <li>
-          <a href="#">Contact Us</a>
-        </li>
+        <li id="scoreboardButton">Scoreboard</li>
+        <li id="contactButton">Contact Us</li>
       </ul>
     </header>
 
     <main>
 
       <section class="left">
-        <button type="button" name="controls/rules" id="instructionsButton">How to Play</button>
-        <button type="button" name="start/pause" id="startButton">Start</button>
+        <button class="button box" type="button" name="controls/rules" id="instructionsButton">How to Play</button>
+        <button class="button box" type="button" name="start/pause" id="startButton">Start</button>
       </section>
 
       <section class="centre">
-        <div class="grid" id="mainGrid"></div>
+        <div class="grid grid-box" id="mainGrid"></div>
       </section>
 
       <section class="right">
         <div class="next-block">
           <h3>Next Block</h3>
-          <div class="grid" id="previewGrid"></div>
+          <div class="grid grid-box" id="previewGrid"></div>
         </div>
-        <div class="scores">
+        <div class="scores box">
           <p>High Score:
             <span id="highScore"></span></p>
           <p>Level:
@@ -50,7 +46,7 @@
       </section>
 
       <div class="modal" id="instructionsModal">
-        <div class="modal-content">
+        <div class="modal-content box">
           <span class="close">&times;</span>
           <h2>How to Play</h2>
           <div class="controls">
@@ -76,6 +72,31 @@
               <li>The 'next block' window will help you plan your moves</li>
               <li>If the blocks get too high, the game is over</li>
             </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal" id="contactModal">
+        <div class="modal-content box">
+          <h2>Contact Us</h2>
+          <p>
+            If you have found a bug, or are having difficuly playing the game?
+            Or maybe you have a suggestion to make the game better?
+            Please let us know:
+          </p>
+          <div class="form-box">
+            <form class="contact-form">
+              <input type="text" name="full-name" placeholder="Full Name" required>
+              <input type="email" name="email" placeholder="Email Address" required>
+              <select name="subject" required>
+                <option value="" disabled selected>Subject</option>
+                <option value="bugs">Bugs</option>
+                <option value="suggestions">Suggestions</option>
+                <option value="other">Other</option>
+              </select>
+              <textarea name="message" rows="8" cols="60" placeholder="Write you message here" required></textarea>
+              <button  class="button box" type="submit" name="submit">Submit</button>
+            </form>
           </div>
         </div>
       </div>
