Centre 'submit' button on the contact Modal
  - centre the submit button on the contact form
  - tweak spacings and screen positions of main page sections

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
           </div>
         </div>
       </div>
-
       <div class="modal" id="contactModal">
         <div class="modal-content box">
           <h2>Contact Us</h2>
@@ -95,7 +94,7 @@
                 <option value="other">Other</option>
               </select>
               <textarea name="message" rows="8" cols="60" placeholder="Write you message here" required></textarea>
-              <button  class="button box" type="submit" name="submit">Submit</button>
+              <button  class="button" type="submit" name="submit">Submit</button>
             </form>
           </div>
         </div>
