Adjust styling and layout for better responsiveness
  - add a rules button to the menu for smaller screens
  - adjust the modals so they have a fixed height and a y-axis scroll
  - adjust margins and text alignment/size for better fits on all
    screens

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
       <h1>Block Puzzle</h1>
       <ul>
+        <li id="instructions">How to Play</li>
         <li id="scoreboardButton">Scoreboard</li>
         <li id="contactButton">Contact Us</li>
       </ul>
