--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <div class="modal" id="instructionsModal">
         <div class="modal-content box">
-          <span class="close">&times;</span>
+          <span id="close">&times;</span>
           <h2>How to Play</h2>
           <div class="controls">
             <h3>Controls</h3>
