--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </section>
 
       <section class="centre">
-        <div class="grid grid-box" id="mainGrid"></div>
+        <div class="grid-box" id="mainGrid"></div>
       </section>
 
       <section class="right">
         <div class="next-block">
           <h3>Next Block</h3>
-          <div class="grid grid-box" id="previewGrid"></div>
+          <div class="grid-box" id="previewGrid"></div>
         </div>
         <div class="scores box">
           <p>High Score:
