Rework block arrays to refer to the grid width
  - re-write the arrays that define the block shapes to refer to the
    gridWidth constant
  - add the buttons and modals into corresponding arrays

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
       </div>
       <div class="modal" id="menuModal">
         <div class="modal-content box">
-          <button class="button box" type="button" name="start/pause" id="startButtonSmall">Start</button>
-          <button class="button box" type="button" name="instructions" id="instructionsButtonSmall">How to Play</button>
-          <button class="button box" type="button" name="scoreboard" id="scoreboardButtonSmall">Scoreboard</button>
+          <button class="button box" name="start/pause" id="startButtonSmall">Start</button>
+          <button class="button box" name="instructions" id="instructionsButtonSmall">How to Play</button>
+          <button class="button box" name="scoreboard" id="scoreboardButtonSmall">Scoreboard</button>
         </div>
       </div>
     </main>
