--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         </div>
       </section>
 
+      <div class="modal" id="menuModal">
+        <div class="modal-content box">
+          <button class="button box" name="start/pause" id="startButtonSmall">Start</button>
+          <button class="button box" name="instructions" id="instructionsButtonSmall">How to Play</button>
+          <button class="button box" name="scoreboard" id="scoreboardButtonSmall">Scoreboard</button>
+        </div>
+      </div>
       <div class="modal" id="instructionsModal">
         <div class="modal-content box">
           <span id="close">&times;</span>
@@ -102,13 +109,16 @@
           </div>
         </div>
       </div>
-      <div class="modal" id="menuModal">
+      <div class="modal" id="gameOverModal">
         <div class="modal-content box">
-          <button class="button box" name="start/pause" id="startButtonSmall">Start</button>
-          <button class="button box" name="instructions" id="instructionsButtonSmall">How to Play</button>
-          <button class="button box" name="scoreboard" id="scoreboardButtonSmall">Scoreboard</button>
+          <h3>Game Over</h3>
+          <p>
+            Your score was: <span id="finalScore"></span>
+          </p>
+          <button class="button box" id="playAgainButton">Play Again</button>
         </div>
       </div>
+
     </main>
     <script src="https://kit.fontawesome.com/b0451faeb3.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
