Alter the way that the grids are made
  - change grid-drawing constants to make them more readable,
    and apply the changes to the css file as well
  - pre-define some empty matrices that are used in the making
    of the grids
  - change the grid drawing function to be more general, and add this
    new function to the event listener that will draw the grids once the
    page is loaded

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </section>
 
       <section class="centre">
-        <div class="grid-box" id="mainGrid"></div>
+        <div class="grid-box" id="gameBox"></div>
       </section>
 
       <section class="right">
         <div class="next-block">
           <h3>Next Block</h3>
-          <div class="grid-box" id="previewGrid"></div>
+          <div class="grid-box" id="previewBox"></div>
         </div>
         <div class="scores box">
           <p>High Score:
