Generalise the drawing functions
  - redefine the matrices for use in the draw functions
  - generalise the draw function to avoid repetition
  - amend the undraw function to include the new matrix names, and
    adjust all other references from 'matrix' to 'gameMatrix'
  - amend the function that draws the next block and all the movement
    functions to include the new draw function

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
         </div>
       </div>
-      <div class="modal" id="instructionsModal">
+      <div class="modal" id="rulesModal">
         <div class="modal-content box">
           <span id="closeButton">&times;</span>
           <h2>How to Play</h2>
@@ -111,6 +111,9 @@
             </form>
           </div>
         </div>
+      </div>
+      <div class="modal" id="scoreboardModal">
+
       </div>
       <div class="modal" id="gameOverModal">
         <div class="modal-content box">
