Add a score multiplier to the scoring function
  - add a multiplier that gives the user more points for more lines
    cancelled at once
  - adjust the rules modal to include the new scores
  - adjust the game over function so that is only stops the game if the
    block stops at the top of the matrix
  - amend yet more instances of 'matrix' to 'gameMatrix'

--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
         <div class="scores box">
           <p>High Score:
             <span id="highScore"></span></p>
-          <p>Level:
-            <span id="currentLevel"></span></p>
           <p>Score:
             <span id="currentScore"></span></p>
         </div>
@@ -77,9 +75,10 @@
               <li>Clear as many lines as possible by fitting the blocks together until a whole row is full</li>
               <li>Earn points for every line you make:
                 <ul>
-                  <li>10 for one line</li>
-                  <li>50 for two line</li>
-                  <li>150 for three line</li>
+                  <li>20 for one line</li>
+                  <li>60 for two lines</li>
+                  <li>140 for three lines</li>
+                  <li>300 for four lines</li>
                 </ul>
               </li>
               <li>The 'next block' window will help you plan your moves</li>
