Add a for loop to populate the scoreboard modal

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <div class="grid-box" id="previewBox"></div>
         </div>
         <div class="scores box">
-          <p>High Score:
-            <span id="highScoreBox"></span></p>
-          <p>Score:
-            <span id="currentScoreBox"></span></p>
+          <h4>High Score:</h4>
+            <span id="highScoreBox"></span>
+          <h4>Score:</h4>
+            <span id="currentScoreBox"></span>
         </div>
       </section>
 
@@ -112,7 +112,10 @@
         </div>
       </div>
       <div class="modal" id="scoreboardModal">
-
+        <div class="modal-content box">
+          <h3>High Scores</h3>
+          <ol id="scoreboardListBox"></ol>
+        </div>
       </div>
       <div class="modal" id="gameOverModal">
         <div class="modal-content box">
