Add buttons to be used with touch screens
  - add some control buttons so that users with touch screens can
    control the blocks during the game
  - adjust the size of the game grid for small screens so the buttons
    will be on screen

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       <section class="centre">
         <button class="button box" id="startButtonSmall">Start</button>
         <div class="grid-box" id="gameBox"></div>
+        <div class="touch-controls">
+          <i class="fas fa-arrow-left" id="leftArrow"></i>
+          <i class="fas fa-arrow-up" id="upArrow"></i>
+          <i class="fas fa-arrow-down" id="downArrow"></i>
+          <i class="fas fa-arrow-right" id="rightArrow"></i>
+        </div>
       </section>
 
       <section class="right">
