--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <main>
 
-      <section class="left">
+      <section class="left col">
         <button class="button box" type="button" name="start/pause" id="startButton">Start</button>
       </section>
 
-      <section class="centre">
+      <section class="centre col">
         <button class="button box" id="startButtonSmall">Start</button>
         <div class="grid-box" id="gameBox"></div>
         <div class="touch-controls">
@@ -41,7 +41,7 @@
         </div>
       </section>
 
-      <section class="right">
+      <section class="right col">
         <div class="next-block">
           <h3>Next Block</h3>
           <div class="grid-box" id="previewBox"></div>
@@ -66,32 +66,30 @@
       <div class="modal" id="rulesModal">
         <div class="modal-content box">
           <span id="closeButton">&times;</span>
-          <h2>How to Play</h2>
-          <div class="controls">
-            <h3>Controls</h3>
-            <ul>
-              <li>You can use either the arrow or WSAD keys</li>
-              <li>Use the left-right/A-D keys to move the block sideways</li>
-              <li>Down-S moves the block faster</li>
-              <li>Up-W rotates the block</li>
-            </ul>
-          </div>
-          <div class="rules">
-            <h3>Rules</h3>
-            <ul>
-              <li>Clear as many lines as possible by fitting the blocks together until a whole row is full</li>
-              <li>Earn points for every line you make:
-                <ul>
-                  <li>20 for one line</li>
-                  <li>60 for two lines</li>
-                  <li>140 for three lines</li>
-                  <li>300 for four lines</li>
-                </ul>
-              </li>
-              <li>The 'next block' window will help you plan your moves</li>
-              <li>If the blocks get too high, the game is over</li>
-            </ul>
-          </div>
+          <article class="rules-box">
+            <h2>How to Play</h2>
+            <div class="controls">
+              <h3>Controls</h3>
+                <p>You can use either the arrow or WSAD keys</p>
+                <p>Use the left-right/A-D keys to move the block sideways</p>
+                <p>Down-S moves the block faster</p>
+                <p>Up-W rotates the block</p>
+            </div>
+            <div class="rules">
+              <h3>Rules</h3>
+                <p>Clear as many lines as possible by fitting the blocks together until a whole row is full</p>
+                <p>Earn points for every line you make:
+                  <ul>
+                    <li>20 for one line</li>
+                    <li>60 for two lines</li>
+                    <li>140 for three lines</li>
+                    <li>300 for four lines</li>
+                  </ul>
+                </p>
+                <p>The 'next block' window will help you plan your moves</p>
+                <p>If the blocks get too high, the game is over</p>
+            </div>
+          </article>
         </div>
       </div>
       <div class="modal" id="contactModal">
