Adjust styling of the scoreboard modal

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
           </div>
         </div>
       </div>
-      <div class="modal" id="scoreboardModal">
-        <div class="modal-content box">
+      <div class="modal"style="display: block;" id="scoreboardModal">
+        <div class="modal-content box scoreboard-box">
           <h3>High Scores</h3>
           <ol id="scoreboardListBox"></ol>
         </div>
