--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
         <div class="scores box">
           <h4>High Score:</h4>
-            <span id="highScoreBox"></span>
+          <p id="highScoreBox"></p>
           <h4>Score:</h4>
-            <span id="currentScoreBox"></span>
+          <p id="currentScoreBox"></p>
         </div>
       </section>
 
@@ -116,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="modal"style="display: block;" id="scoreboardModal">
+      <div class="modal" id="scoreboardModal">
         <div class="modal-content box scoreboard-box">
           <h3>High Scores</h3>
           <ol id="scoreboardListBox"></ol>
