Fix styling on contact form and add closing icons
  - Fix the styling of the contact form so that the input fields
    line up
  - Standardize the headings for all modals
  - Add close buttons for all but the menu modal, and wire them up in
    the same way used for the other buttons throughout the page
  - Adjust the scoreboard styling to account for the new closing button

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       </div>
       <div class="modal" id="rulesModal">
         <div class="modal-content box">
-          <span id="closeButton">&times;</span>
+          <span class="close-button" id="rulesCloseButton">&times;</span>
+          <h2>How to Play</h2>
           <article class="rules-box">
-            <h2>How to Play</h2>
             <div class="controls">
               <h3>Controls</h3>
                 <p>You can use either the arrow or WSAD keys</p>
@@ -94,6 +94,7 @@
       </div>
       <div class="modal" id="contactModal">
         <div class="modal-content box">
+          <span class="close-button" id="contactCloseButton">&times;</span>
           <h2>Contact Us</h2>
           <p>
             If you have found a bug, or are having difficuly playing the game?
@@ -118,13 +119,15 @@
       </div>
       <div class="modal" id="scoreboardModal">
         <div class="modal-content box scoreboard-box">
-          <h3>High Scores</h3>
+          <span class="close-button" id="scoreboardCloseButton">&times;</span>
+          <h2>High Scores</h2>
           <ol id="scoreboardListBox"></ol>
         </div>
       </div>
       <div class="modal" id="gameOverModal">
         <div class="modal-content box">
-          <h3>Game Over</h3>
+          <span class="close-button"id="gameOverCloseButton">&times;</span>
+          <h2>Game Over</h2>
           <p>Your score was: <span id="finalScoreBox"></span></p>
           <form class="contact-form">
             <input type="text" name="playerName" placeholder="name" id="playerName" required>
