Add user feedback for the contact form
  - add alerts to tell the user whether the form has been submitted
  - add a function to clear the form and close the modal once submitted

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <option value="other">Other</option>
               </select>
               <textarea name="message" rows="8" cols="60" placeholder="Write you message here" required></textarea>
-              <button  class="button" type="submit" name="submit">Submit</button>
+              <button class="button" type="submit" name="submit" id="submitButton">Submit</button>
             </form>
           </div>
         </div>
