Fix button location in the game over modal
  - move the 'play again' button to be in the centre of the modal
    with a margin to the bottom of the box
  - adjust breakpoints of the media queries to shrink down to just 2
  - attempt a fix for an issue with local storage on deployed site

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
             <input type="text" name="playerName" placeholder="name" id="playerName" required>
             <button class="button box" type="submit" id="saveScoreButton">Save</button>
           </form>
-          <button class="button box" id="playAgainButton">Play Again</button>
+          <div class="play-again">
+            <button class="button box" id="playAgainButton">Play Again</button>
+          </div>
         </div>
       </div>
 
