Amend the heading tags and add description
  - adjust the heading tags in the right hand section for better
    readability
  - add a meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A tetris-like web-based game">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Geo&display=swap" rel="stylesheet">
@@ -43,11 +44,11 @@
 
       <section class="right col">
         <div class="next-block">
-          <h3>Next Block</h3>
+          <h2>Next Block</h2>
           <div class="grid-box" id="previewBox"></div>
         </div>
         <div class="scores box">
-          <h4>High Score:</h4>
+          <h3>High Score:</h3>
           <p id="highScoreBox"></p>
           <h4>Score:</h4>
           <p id="currentScoreBox"></p>
