Minor fixes after mentor meeting
  - correct the spelling in the alert box from the contact form
  - adjust how the buttons and modals are defined
  - split up the start and pause functions so it is more modular
  - remove the list from the p element in the rules modal

--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
             <div class="rules">
               <h3>Rules</h3>
                 <p>Clear as many lines as possible by fitting the blocks together until a whole row is full</p>
-                <p>Earn points for every line you make:
+                <p>Earn points for every line you make:</p>
                   <ul>
                     <li>20 for one line</li>
                     <li>60 for two lines</li>
                     <li>140 for three lines</li>
                     <li>300 for four lines</li>
                   </ul>
-                </p>
                 <p>The 'next block' window will help you plan your moves</p>
                 <p>If the blocks get too high, the game is over</p>
             </div>
